# datautils

./: DESCRIPTION  MD5  NAMESPACE  configure  configure.ac
R/: functions.R
man/: getElapsed.Rd  getPurity.Rd  getTimestamp.Rd  mergeToList.Rd  plot.deldir.Rd  plotmeanshack.Rd  upper.Rd
src/: Makevars  config.h  datautils_init.c  utils.c  utils.h
